@@ -1,4 +1,8 @@
+2007-06-11  Maximilien Cuony
+        * Auo detect neew version and propose update for FireGPG.
+
 2007-06-09  Maximilien Cuony
+        * 0.4.1 packed, and uploaded to the server !
         * de, pl, es, nl, pt, it updated too.
         * Updated locates
 
